--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,12 @@
   padding: 0 15px;
 }
 
+.wrapper-2 {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
 .wr-content {
   max-width: 1060px;
   margin: 0 auto;
@@ -21,6 +27,7 @@
   background-repeat: no-repeat;
   background-position: 0 0;
   padding-bottom: 30px;
+
   a {
     color: #fff;
   }
@@ -38,12 +45,14 @@
   align-items: center;
   margin-bottom: 20px;
   font-size: 18px;
+
   &__contact {
     font-size: 18px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
     a {
       font-size: 18px;
     }
@@ -60,6 +69,7 @@
 
 .social-networks {
   display: flex;
+
   &__wr {
     width: 45px;
     height: 45px;
@@ -78,6 +88,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
   a {
     font-size: 18px;
     padding: 8px;
@@ -88,7 +99,7 @@
 }
 
 .content-main {
-margin-bottom: 20px;
+  margin-bottom: 20px;
 
   &__text {
     width: 530px;
@@ -101,12 +112,14 @@ margin-bottom: 20px;
     font-size: 35px;
     font-weight: 700;
     line-height: 1.2;
+
     span {
       margin-left: 14px;
       border-radius: 12px;
       padding: 6px 12px;
       background: linear-gradient(to right, #fca445 0%, #e8580c 100%);
     }
+
     margin-bottom: 16px;
   }
 
@@ -122,6 +135,7 @@ margin-bottom: 20px;
   &__wr-message {
     display: flex;
   }
+
   &__phone {
     margin-right: 16px;
     max-width: 250px;
@@ -150,40 +164,46 @@ margin-bottom: 20px;
     margin-bottom: 20px;
   }
 
-  img{
+  img {
     margin-right: 14px;
   }
 }
 
 
-
-
 ///************ FOUNDER *****************////
 .founder {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  //background-color: red;
+  background-image: url("../img/icon/line.png");
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  background-size: auto auto;
 
-  &__company{
+  &__company {
     margin-bottom: 24px;
   }
 
-  &__wr-img{
+  &__wr-img {
     width: 390px;
     height: 340px;
     margin-bottom: 10px;
   }
-  &__img{
+
+  &__img {
     width: 100%;
     height: 100%;
     object-fit: cover;
   }
-  &__name{
+
+  &__name {
     margin-bottom: 30px;
   }
-  &__quote{
+
+  &__quote {
     max-width: 840px;
     min-width: 320px;
     font-style: italic;
@@ -191,13 +211,66 @@ margin-bottom: 20px;
     text-align: center;
     margin-bottom: 40px;
   }
-  &__info{
+
+  &__info {
     font-size: 24px;
-    max-width: 960px;
-    min-width: 320px;
-    span{
+
+    span {
       font-weight: bold;
     }
+  }
+}
+
+///************ DIGIT *****************////
+
+.digit {
+  padding-top: 50px;
+  padding-bottom: 50px;
+
+  &__items {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 350px;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 20px;
+  }
+
+  &__img {
+    height: 48px;
+    width: 48px;
+    margin-bottom: 20px;
+  }
+
+  &__title {
+    font-size: 17px;
+    font-weight: bold;
+    text-align: center;
+    padding-bottom: 30px;
+
+    &::after {
+      content: " ";
+      display: block;
+      height: 2px;
+      width: 40px;
+      background-color: #3e3d3d;
+
+      position: relative;
+      top: 16px;
+      left: 50%;
+      transform: translatex(-50%);
+    }
+  }
+
+  &__info{
+    text-align: center;
   }
 
 }
