--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "fonts";
 @import "setting";
+@import "modal";
 
 .header {
   margin-bottom: 16px;
@@ -269,8 +270,92 @@
     }
   }
 
-  &__info{
+  &__info {
+    text-align: center;
+  }
+}
+
+
+///************ types-coverings *****************////
+.types-coverings {
+  background: url('../img/types/types1.jpg') no-repeat center top, url('../img/types/types2.jpg') no-repeat center 500px;
+  padding-bottom: 50px;
+  padding-top: 50px;
+
+  &__title {
+    margin-bottom: 25px;
     text-align: center;
   }
 
+  &__description {
+    margin-bottom: 25px;
+    text-align: center;
+    max-width: 956px;
+
+  }
+
+  &__items {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 2px;
+  }
+
+  &__item-wr {
+    position: relative;
+    background-color: rgba(7, 121, 172, 0.7);
+    width: 46%;
+    padding: 20px;
+
+    &::after {
+      content: " ";
+      display: block;
+      height: 1px;
+      width: 65%;
+      background: rgba(255,255,255,0.33);
+      position: absolute;
+      top: 28px;
+      right: -5%;
+    }
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    flex: 0 1 460px;
+    flex-wrap: wrap;
+
+    //background-image: url("../img/types/minimum.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: auto auto;
+  }
+
+  &__item-type {
+    color: rgba(109,253,255,0.4);
+    font-size: 16px;
+    margin-bottom: 16px;
+    font-weight: bold;
+  }
+
+  &__item-title {
+    color: rgba(255,255,255,0.8);
+    font-size: 19px;
+    font-weight: bold;
+    margin-bottom: 160px;
+  }
+
+
+  .type-1 {
+    background-image: url("../img/types/minimum.jpg");
+  }
+
+  .type-2 {
+    background-image: url("../img/types/optim.jpg");
+  }
+
+  .type-3 {
+    background-image: url("../img/types/vip.jpg");
+  }
 }
