--- a/sass/main.css
+++ b/sass/main.css
@@ -540,4 +540,184 @@ body {
   background-image: url("../img/types/vip.jpg");
 }
 
+.history {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.section-title {
+  margin-bottom: 25px;
+}
+
+.sub-wrapper-history {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.container-history {
+  position: relative;
+}
+.container-history::after {
+  position: absolute;
+  content: " ";
+  display: inline-block;
+  height: 100%;
+  width: 2px;
+  top: 0px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #3e3d3d;
+}
+
+.name-year {
+  position: relative;
+  content: "2021";
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  left: 50%;
+  top: 0px;
+  transform: translateX(-50%);
+  width: 73px;
+  height: 73px;
+  border: 2px solid #3e3d3d;
+  border-radius: 50%;
+  font-size: 13px;
+  letter-spacing: 1.47px;
+  z-index: 1;
+  margin-bottom: 40px;
+  background-color: #fff;
+}
+
+.colum-history {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.colum-history .items-history {
+  position: relative;
+  width: 47%;
+  height: min-content;
+  border: 2px solid #3e3d3d;
+  padding: 28px 60px 30px 20px;
+}
+.colum-history .items-history:nth-child(odd)::before {
+  content: " ";
+  display: inline-block;
+  position: absolute;
+  right: -14px;
+  top: 25px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 13px 13px 0 0;
+  border-color: #3e3d3d transparent transparent transparent;
+}
+.colum-history .items-history:nth-child(odd)::after {
+  content: " ";
+  display: inline-block;
+  position: absolute;
+  right: -10px;
+  top: 27px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 11px 11px 0 0;
+  border-color: #fff transparent transparent transparent;
+}
+.colum-history .items-history:nth-child(odd) p::before {
+  content: " ";
+  display: inline-block;
+  background-color: #3e3d3d;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  position: absolute;
+  right: -8.2%;
+  top: 20px;
+}
+.colum-history .items-history:nth-child(even)::before {
+  content: " ";
+  display: inline-block;
+  position: absolute;
+  left: -14px;
+  top: 25px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 13px 13px 0;
+  border-color: transparent #3e3d3d transparent transparent;
+}
+.colum-history .items-history:nth-child(even)::after {
+  content: " ";
+  display: inline-block;
+  position: absolute;
+  left: -10px;
+  top: 27px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 11px 11px 0;
+  border-color: transparent #fff transparent transparent;
+}
+.colum-history .items-history:nth-child(even) p::before {
+  content: " ";
+  display: inline-block;
+  background-color: #3e3d3d;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  position: absolute;
+  left: -8.2%;
+  top: 20px;
+}
+.colum-history .items-history h3 {
+  font-size: 13px;
+  text-transform: uppercase;
+  letter-spacing: 1.47px;
+  margin-bottom: 8px;
+}
+.colum-history .items-history > p {
+  font-size: 11px;
+  margin-bottom: 26px;
+}
+.colum-history .items-history p + p {
+  font-size: 14px;
+  letter-spacing: 1.4px;
+  line-height: 1.5;
+}
+.colum-history .items-history p + p:last-of-type {
+  margin-bottom: 0;
+}
+.colum-history .items-history:nth-child(odd) {
+  margin-bottom: 30px;
+}
+.colum-history .items-history:nth-child(even) {
+  margin-top: 40px;
+}
+.colum-history .items-history:hover {
+  background-color: #3e3d3d;
+  color: #ededed;
+}
+.colum-history .items-history:hover::after {
+  opacity: 0;
+}
+
+.lamp {
+  margin-bottom: 0;
+  width: 54px;
+  height: 54px;
+  border: 2px solid #3e3d3d;
+  background-color: #3e3d3d;
+  border-radius: 50%;
+}
+.lamp svg {
+  fill: #e4e4e4;
+  height: 25px;
+}
+
 /*# sourceMappingURL=main.css.map */
