--- a/sass/main.scss
+++ b/sass/main.scss
@@ -359,3 +359,208 @@
     background-image: url("../img/types/vip.jpg");
   }
 }
+
+
+
+//************************************************
+
+// History
+.history {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.section-title{
+  margin-bottom: 25px;
+}
+.sub-wrapper-history {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.container-history {
+  position: relative;
+  &::after {
+    position: absolute;
+    content: " ";
+    display: inline-block;
+    height: 100%;
+    width: 2px;
+    top: 0px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #3e3d3d;
+  }
+}
+// ------------
+// name-year
+.name-year {
+  position: relative;
+  content: "2021";
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  left: 50%;
+  top: 0px;
+  transform: translateX(-50%);
+
+  width: 73px;
+  height: 73px;
+  border: 2px solid #3e3d3d;
+  border-radius: 50%;
+  font-size: 13px;
+  letter-spacing: 1.47px;
+
+  z-index: 1;
+  margin-bottom: 40px;
+  background-color: #fff;
+}
+// ---------
+// Colum-history
+.colum-history {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+  .items-history {
+    position: relative;
+    width: 47%;
+    height: min-content;
+    border: 2px solid #3e3d3d;
+    padding: 28px 60px 30px 20px;
+
+    &:nth-child(odd) {
+      &::before {
+        content: " ";
+        display: inline-block;
+        position: absolute;
+        right: -14px;
+        top: 25px;
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 13px 13px 0 0;
+        border-color: #3e3d3d transparent transparent transparent;
+      }
+      &::after {
+        content: " ";
+        display: inline-block;
+        position: absolute;
+        right: -10px;
+        top: 27px;
+
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 11px 11px 0 0;
+        border-color: #fff transparent transparent transparent;
+      }
+      p {
+        &::before {
+          content: " ";
+          display: inline-block;
+          background-color: #3e3d3d;
+          width: 16px;
+          height: 16px;
+          border-radius: 50%;
+          position: absolute;
+          right: -8.2%;
+          // transform: translateX(8.4%);
+          top: 20px;
+        }
+      }
+    }
+    &:nth-child(even) {
+      &::before {
+        content: " ";
+        display: inline-block;
+        position: absolute;
+        left: -14px;
+        top: 25px;
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 0 13px 13px 0;
+        border-color: transparent #3e3d3d transparent transparent;
+      }
+      &::after {
+        content: " ";
+        display: inline-block;
+        position: absolute;
+        left: -10px;
+        top: 27px;
+
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 0 11px 11px 0;
+        border-color: transparent #fff transparent transparent;
+      }
+      p {
+        &::before {
+          content: " ";
+          display: inline-block;
+          background-color: #3e3d3d;
+          width: 16px;
+          height: 16px;
+          border-radius: 50%;
+          position: absolute;
+          left: -8.2%;
+
+          top: 20px;
+        }
+      }
+    }
+    h3 {
+      font-size: 13px;
+      text-transform: uppercase;
+      letter-spacing: 1.47px;
+      margin-bottom: 8px;
+    }
+    > p {
+      font-size: 11px;
+      margin-bottom: 26px;
+    }
+    p + p {
+      font-size: 14px;
+      letter-spacing: 1.4px;
+      line-height: 1.5;
+      &:last-of-type {
+        margin-bottom: 0;
+      }
+    }
+    &:nth-child(odd) {
+      margin-bottom: 30px;
+    }
+    &:nth-child(even) {
+      margin-top: 40px;
+    }
+    &:hover {
+      background-color: #3e3d3d;
+      color: #ededed;
+      &::after {
+        opacity: 0;
+      }
+    }
+  }
+}
+.name-year-2021 {
+}
+.name-year-2020 {
+}
+.lamp {
+  margin-bottom: 0;
+  width: 54px;
+  height: 54px;
+  border: 2px solid #3e3d3d;
+  background-color: #3e3d3d;
+  border-radius: 50%;
+  svg {
+    fill: #e4e4e4;
+    height: 25px;
+  }
+}
+
+// =======================
