--- a/sass/main.css
+++ b/sass/main.css
@@ -720,4 +720,105 @@ body {
   height: 25px;
 }
 
+.order {
+  color: #fff;
+  background-image: url("../img/order/order.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.order .wrapper-2 {
+  padding-bottom: 50px;
+  padding-top: 50px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.order-cost-calculation {
+  margin-right: 30px;
+  flex: 1 1 500px;
+}
+.order-cost-calculation__title {
+  font-size: 28px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.order-cost-calculation__subtitle {
+  font-size: 19px;
+  margin-bottom: 20px;
+}
+.order-cost-calculation__subtitle span {
+  color: #6dfdff;
+}
+.order-cost-calculation__relation-price {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+.order-cost-calculation__item {
+  position: relative;
+  font-size: 16px;
+  padding-left: 14px;
+  margin-bottom: 8px;
+}
+.order-cost-calculation__item::before {
+  content: " ";
+  display: block;
+  border: 1px solid #fff;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  position: absolute;
+  left: -2px;
+  top: 6px;
+}
+
+.order-get-price {
+  flex: 1 1 320px;
+  padding: 5px;
+  border-radius: 3px;
+  border: rgba(255, 255, 255, 0.1) solid 1px;
+}
+
+.order-from {
+  height: 100%;
+  padding: 24px 36px;
+  border-radius: 3px;
+  background: rgba(255, 255, 255, 0.2);
+  flex-direction: column;
+  align-items: center;
+  display: flex;
+}
+.order-from__title {
+  font-size: 24px;
+  margin-bottom: 6px;
+}
+.order-from__title span {
+  font-size: 16px;
+}
+.order-from__wr-input {
+  padding-bottom: 8px;
+  width: 100%;
+}
+.order-from__wr-input:last-of-type {
+  margin-bottom: 16px;
+}
+.order-from__lable {
+  display: block;
+  font-size: 12px;
+  color: rgba(255, 255, 255, 0.5);
+}
+.order-from__input {
+  padding: 8px 10px;
+  border-radius: 3px;
+  border: rgba(255, 255, 255, 0.3) solid 1px;
+  width: 100%;
+}
+.order-from input::placeholder {
+  color: rgba(0, 137, 200, 0.8);
+  font-size: 16px;
+}
+.order-from__btn {
+  width: 100%;
+}
+
 /*# sourceMappingURL=main.css.map */
