--- a/sass/main.css
+++ b/sass/main.css
@@ -821,4 +821,83 @@ body {
   width: 100%;
 }
 
+.works {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.works__title {
+  text-align: center;
+  margin-bottom: 25px;
+}
+.works__items {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+.works__item {
+  position: relative;
+  flex: 1 1 260px;
+  height: 200px;
+  overflow: hidden;
+  background-image: url("../img/works/brovinka/w1_1.jpg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: cover;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.works__item:hover {
+  box-shadow: 0 0 25px rgb(1, 141, 181);
+}
+.works__item:hover .works__inner {
+  bottom: 0;
+}
+.works__inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: #fff;
+  position: absolute;
+  bottom: -50%;
+  width: 100%;
+  height: 160px;
+  padding: 18px 20px;
+  background-color: rgba(10, 147, 209, 0.7);
+  transition: 0.5s;
+}
+.works__name-place {
+  font-size: 20px;
+}
+.works__btn {
+  display: flex;
+  padding: 5px 10px 4px 4px;
+  align-items: center;
+  width: 124px;
+  border: rgba(255, 255, 255, 0.5) solid 1px;
+  background: rgba(255, 255, 255, 0.4);
+  border-radius: 16px;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+  color: #fff;
+  transition: 0.3s;
+}
+.works__btn .wr-svg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 26px;
+  width: 26px;
+  margin-right: 8px;
+  border-radius: 50%;
+  background: linear-gradient(to right, #fca445 0%, #e8580c 100%);
+}
+.works__btn:hover {
+  border: #e8580c solid 1px;
+}
+.works svg {
+  height: 16px;
+  fill: #fff;
+}
+
 /*# sourceMappingURL=main.css.map */
