--- a/sass/main.scss
+++ b/sass/main.scss
@@ -592,8 +592,6 @@
 
 .order {
     color: #fff;
-
-
     background-image: url("../img/order/order.jpg");
     background-position: center center;
     background-repeat: no-repeat;
@@ -610,6 +608,7 @@
 .order-cost-calculation {
     margin-right: 30px;
     flex: 1 1 500px;
+
     &__title {
         font-size: 28px;
         text-align: center;
@@ -653,11 +652,11 @@
 
 .order-get-price {
     flex: 1 1 320px;
-    //max-width: 310px;
     padding: 5px;
     border-radius: 3px;
-    border: rgba(255,255,255,0.1) solid 1px;
+    border: rgba(255, 255, 255, 0.1) solid 1px;
 }
+
 .order-from {
     height: 100%;
     padding: 24px 36px;
@@ -671,34 +670,134 @@
     &__title {
         font-size: 24px;
         margin-bottom: 6px;
+
         span {
             font-size: 16px;
         }
     }
 
-    &__wr-input{
+    &__wr-input {
         padding-bottom: 8px;
         width: 100%;
+
         &:last-of-type {
             margin-bottom: 16px;
         }
     }
-    &__lable{
+
+    &__lable {
         display: block;
         font-size: 12px;
-        color: rgba(255,255,255,0.5);
+        color: rgba(255, 255, 255, 0.5);
     }
+
     &__input {
         padding: 8px 10px;
         border-radius: 3px;
-        border: rgba(255,255,255,0.3) solid 1px;
+        border: rgba(255, 255, 255, 0.3) solid 1px;
         width: 100%;
     }
+
     input::placeholder {
-        color: rgba(0,137,200,0.8);
+        color: rgba(0, 137, 200, 0.8);
         font-size: 16px;
     }
+
     &__btn {
         width: 100%;
+    }
+}
+
+//**********************  WORKS  ****************
+
+.works {
+    padding-top: 50px;
+    padding-bottom: 50px;
+
+    &__title {
+        text-align: center;
+        margin-bottom: 25px;
+    }
+
+    &__items {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+
+    &__item {
+        position: relative;
+        flex: 1 1 260px;
+        height: 200px;
+        overflow: hidden;
+
+        background-image: url("../img/works/brovinka/w1_1.jpg");
+        background-repeat: no-repeat;
+        background-position: 0 0;
+        background-size: cover;
+        cursor: pointer;
+        transition: 0.5s;
+        &:hover {
+            .works__inner {
+                bottom: 0;
+                //box-shadow: 0 0 25px rgb(1 141 181);
+            }
+
+            box-shadow: 0 0 25px rgb(1 141 181);
+        }
+    }
+
+    &__inner {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        color: #fff;
+        position: absolute;
+        bottom: -50%;
+        width: 100%;
+        height: 160px;
+        padding: 18px 20px;
+        background-color: rgba(10, 147, 209, 0.7);
+        transition: 0.5s;
+    }
+
+    &__name-place {
+        font-size: 20px;
+    }
+
+    &__btn {
+        display: flex;
+        padding: 5px 10px 4px 4px;
+        align-items: center;
+        width: 124px;
+        border: rgba(255, 255, 255, 0.5) solid 1px;
+        background: rgba(255, 255, 255, 0.4);
+        border-radius: 16px;
+        text-shadow: 1px 1px 1px rgb(0 0 0 / 30%);
+        color: #fff;
+        transition: 0.3s;
+        .wr-svg {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 26px;
+            width: 26px;
+            margin-right: 8px;
+            border-radius: 50%;
+            background: linear-gradient(to right, #fca445 0%, #e8580c 100%);
+        }
+        &:hover {
+            //color: #fca445;
+            //transform: scale(1.1);
+            border: #e8580c solid 1px;
+        }
+    }
+
+    svg {
+        height: 16px;
+        fill: #fff;
     }
 }
