--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -9,6 +9,7 @@
   height: 100%;
   overflow: hidden;
   background-color: rgba(0, 77, 112, 0.8);
+  cursor: auto;
 
   &__dialog {
     position: fixed;
@@ -157,7 +158,7 @@
 
 .fade {
   animation-name: fade;
-  animation-duration: 0.2s;
+  animation-duration: 0.3s;
 }
 
 @keyframes fade {
