--- a/sass/main.css
+++ b/sass/main.css
@@ -111,6 +111,7 @@ body {
   height: 100%;
   overflow: hidden;
   background-color: rgba(0, 77, 112, 0.8);
+  cursor: auto;
 }
 .modal__dialog {
   position: fixed;
@@ -231,7 +232,7 @@ body {
 
 .fade {
   animation-name: fade;
-  animation-duration: 0.2s;
+  animation-duration: 0.3s;
 }
 
 @keyframes fade {
@@ -242,6 +243,193 @@ body {
     opacity: 1;
   }
 }
+.container-gallery {
+  display: flex;
+  flex-wrap: wrap;
+  height: max-content;
+  gap: 15px;
+}
+.container-gallery .image {
+  display: flex;
+  width: 90px;
+  overflow: hidden;
+  height: 70px;
+  cursor: pointer;
+}
+.container-gallery .first-img {
+  width: 300px;
+  height: 300px;
+}
+.container-gallery img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  transition: 0.3s;
+}
+.container-gallery img:hover {
+  transform: scale(1.1);
+}
+
+.preview-box {
+  max-width: 700px;
+  width: 100%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.9);
+  background-color: #fff;
+  padding: 0px 5px 5px 5px;
+  border-radius: 3px;
+  box-shadow: 0 0 15px rbga(0, 0, 0, 0.2);
+  z-index: 5;
+  opacity: 0;
+  pointer-events: none;
+}
+.preview-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  transition: 0.3s;
+}
+.preview-box img:hover {
+  transform: none;
+}
+.preview-box .details {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px 15px 12px 10px;
+}
+.preview-box .details .icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  border: 2px solid transparent;
+}
+.preview-box .details .icon:active {
+  border: 2px solid #000;
+}
+.preview-box .details svg {
+  height: 24px;
+  fill: #000;
+  cursor: pointer;
+}
+.preview-box .details .title {
+  display: flex;
+  font-size: 18px;
+  font-weight: 400;
+}
+.preview-box .details .title p {
+  margin: 0 5px;
+}
+.preview-box .details .title p.current-img {
+  font-weight: 800;
+}
+.preview-box .img-box {
+  width: 100%;
+}
+.preview-box .img-box .wr-img-box {
+  height: 70vh;
+}
+.preview-box .img-box .slide {
+  position: absolute;
+  top: 50%;
+  z-index: 3;
+  transform: translateY(-50%);
+  cursor: auto;
+  width: 70px;
+  height: 70px;
+  background-color: transparent;
+}
+.preview-box .img-box .slide svg {
+  height: 18px;
+  position: absolute;
+  top: 24px;
+}
+.preview-box .img-box .slide.prev {
+  left: 20px;
+}
+.preview-box .img-box .slide.prev svg {
+  left: 29px;
+  z-index: 3;
+  cursor: pointer;
+}
+.preview-box .img-box .slide.prev::after {
+  content: "";
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  position: relative;
+  background-color: #f3efef;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.preview-box .img-box .slide.next {
+  right: 20px;
+}
+.preview-box .img-box .slide.next svg {
+  right: 28px;
+  z-index: 3;
+  cursor: pointer;
+}
+.preview-box .img-box .slide.next::after {
+  content: "";
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  position: relative;
+  background-color: #f3efef;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.preview-box .img-box .slide.next::after:hover {
+  opacity: 0.5;
+}
+.preview-box .img-box .slide.next:focus::after {
+  border: 3px solid #3e3d3d;
+}
+.preview-box .img-box .slide.next:hover::after {
+  box-shadow: 0px 0px 30px 0px white;
+}
+.preview-box .img-box .slide.prev:focus::after {
+  border: 3px solid #3e3d3d;
+}
+.preview-box .img-box .slide.prev:hover::after {
+  box-shadow: 0px 0px 30px 0px white;
+}
+.preview-box .img-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.preview-box.show {
+  opacity: 1;
+  pointer-events: auto;
+  transform: translate(-50%, -50%) scale(1);
+  transition: all 0.3s ease;
+  z-index: 25;
+}
+
+.shadow {
+  z-index: 15;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: #000;
+  opacity: 0.4;
+  display: none;
+}
+
 .header {
   margin-bottom: 16px;
 }
@@ -841,11 +1029,11 @@ body {
   flex: 1 1 260px;
   height: 200px;
   overflow: hidden;
+  cursor: pointer;
   background-image: url("../img/works/brovinka/w1_1.jpg");
   background-repeat: no-repeat;
   background-position: 0 0;
   background-size: cover;
-  cursor: pointer;
   transition: 0.5s;
 }
 .works__item:hover {
@@ -881,6 +1069,13 @@ body {
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
   color: #fff;
   transition: 0.3s;
+  position: relative;
+}
+.works__btn .trigger {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: block;
 }
 .works__btn .wr-svg {
   display: flex;
@@ -898,6 +1093,32 @@ body {
 .works svg {
   height: 16px;
   fill: #fff;
+}
+.works .modal__close {
+  color: #000;
+}
+.works .modal__info {
+  min-width: 340px;
+  padding: 30px 20px 20px 20px;
+}
+.works .container-gallery {
+  padding: 10px;
+}
+.works .modal__info-title {
+  font-size: 24px;
+  margin-bottom: 8px;
+  color: #0089c8;
+}
+.works .modal__info-subtitle {
+  font-size: 18px;
+  color: #0089c8;
+  border-bottom: #0089c8 solid 1px;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+.works .modal__info-text {
+  font-size: 18px;
+  margin-bottom: 16px;
 }
 
 /*# sourceMappingURL=main.css.map */
