--- a/sass/main.scss
+++ b/sass/main.scss
@@ -740,6 +740,7 @@
         background-position: 0 0;
         background-size: cover;
         transition: 0.5s;
+
         &:hover {
             .works__inner {
                 bottom: 0;
@@ -780,12 +781,14 @@
         color: #fff;
         transition: 0.3s;
         position: relative;
+
         .trigger {
             position: absolute;
             height: 100%;
             width: 100%;
             display: block;
         }
+
         .wr-svg {
             display: flex;
             align-items: center;
@@ -796,6 +799,7 @@
             border-radius: 50%;
             background: linear-gradient(to right, #fca445 0%, #e8580c 100%);
         }
+
         &:hover {
             border: #e8580c solid 1px;
         }
@@ -810,10 +814,12 @@
     .modal__close {
         color: #000;
     }
+
     .modal__info {
         min-width: 340px;
         padding: 30px 20px 20px 20px;
     }
+
     .container-gallery {
         padding: 10px;
     }
@@ -831,13 +837,58 @@
         padding-bottom: 10px;
         margin-bottom: 10px;
     }
+
     .modal__info-text {
         font-size: 18px;
         margin-bottom: 16px;
     }
 }
 
+//**********************************************
 
 
+//**********************  WORKS  *********************
+.warning {
+    padding-top: 40px;
+    padding-bottom: 25px;
+
+    background-image: url("../img/bg/bg2_c.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+
+    color: #fff;
+
+    &__title {
+        text-align: center;
+        margin-bottom: 30px;
+    }
+
+    &__text {
+        margin-bottom: 10px;
+
+        &:last-of-type {
+            margin-bottom: 30px;
+        }
+    }
+
+    &__btn {
+        display: block;
+        margin: 0 auto;
+    }
+}
+
+//**********************************************
+
+//**********************  TECHNOLOGY  *********************
+
+.technology {
+    padding-top: 25px;
+    padding-bottom: 25px;
+
+    &__text {
+        margin-bottom: 10px;
+    }
+}
 
 
