--- a/sass/main.scss
+++ b/sass/main.scss
@@ -933,6 +933,7 @@
 //**********************  FOOTER  *********************
 .footer {
     background-color: #0092d5;
+    //background-color: red;
     color: #fff;
     padding-top: 35px;
     padding-bottom: 25px;
