--- a/sass/main.css
+++ b/sass/main.css
@@ -1102,6 +1102,8 @@ body {
   .header {
     position: fixed;
     width: 100%;
+    z-index: 10;
+    background-color: rgb(60, 60, 60);
   }
   .main-section__title {
     font-size: 20px;
@@ -1176,6 +1178,46 @@ body {
   .types-coverings {
     background-size: cover;
   }
+  .history {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .history .colum-history {
+    flex-direction: column;
+    align-items: center;
+  }
+  .history .colum-history .items-history {
+    width: 100%;
+    margin-top: 0;
+    margin-bottom: 30px;
+    background-color: #fff;
+    color: #3e3d3d;
+    z-index: 2;
+  }
+  .history .colum-history .items-history:nth-child(odd)::before {
+    display: none;
+  }
+  .history .colum-history .items-history:nth-child(odd)::before p::before {
+    content: none;
+  }
+  .history .colum-history .items-history:nth-child(odd)::after {
+    display: none;
+  }
+  .history .colum-history .items-history:nth-child(even)::before {
+    display: none;
+  }
+  .history .colum-history .items-history:nth-child(even)::before p::before {
+    content: none;
+  }
+  .history .colum-history .items-history:nth-child(even)::after {
+    display: none;
+  }
+  .colum-history .items-history:nth-child(odd) p::before {
+    display: none;
+  }
+  .colum-history .items-history:nth-child(even) p::before {
+    display: none;
+  }
 }
 @media (max-width: 645px) {
   .social__contact {
@@ -1183,9 +1225,27 @@ body {
   }
 }
 @media (max-width: 570px) {
+  .warning {
+    padding-top: 90px;
+  }
   .content-main__text {
     min-width: 320px;
     max-width: 400px;
+  }
+}
+@media (max-width: 490px) {
+  .request-call {
+    display: none;
+  }
+  .content-main__wr-message {
+    flex-direction: column;
+  }
+  .content-main__text {
+    width: 100%;
+  }
+  .content-main__phone {
+    min-width: 100%;
+    margin-bottom: 20px;
   }
 }
 
