--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -64,7 +64,7 @@
         height: 20px;
         width: 30px;
         right: 26px;
-        top: 16px;
+        top: 20px;
 
         &::before {
             content: "";
@@ -108,6 +108,7 @@
     .history {
         padding-left: 15px;
         padding-right: 15px;
+
         .colum-history {
             flex-direction: column;
             align-items: center;
@@ -162,7 +163,20 @@
     }
 }
 
-@media (max-width: 645px) {
+@media (max-width: 680px) {
+
+    .modal__form {
+        padding-top: 36px;
+    }
+
+    .modal__dialog {
+        height: 80vh;
+        overflow: scroll;
+    }
+
+    .modal__content {
+        flex-direction: column-reverse;
+    }
     .social__contact {
         display: none;
     }
@@ -175,7 +189,6 @@
     .content-main__text {
         min-width: 320px;
         max-width: 400px;
-        //width: 100%;
     }
 }
 
