--- a/sass/main.scss
+++ b/sass/main.scss
@@ -244,7 +244,7 @@
     }
 
     &__wr-img {
-        width: 390px;
+        max-width: 390px;
         height: 340px;
         margin-bottom: 10px;
     }
