--- a/sass/main.css
+++ b/sass/main.css
@@ -1128,6 +1128,18 @@ body {
     z-index: 10;
     background-color: rgb(60, 60, 60);
   }
+  .navigation {
+    display: block;
+    padding-left: 30px;
+    padding-top: 30px;
+  }
+  .navigation__link {
+    color: #010101;
+  }
+  .navigation li {
+    border-radius: unset;
+    border-bottom: solid 1px #000;
+  }
   nav .navigation {
     position: fixed;
     top: 84px;
@@ -1137,7 +1149,11 @@ body {
     background-color: #fff;
     transition: all 0.3s ease 0s;
     overflow: auto;
-    opacity: 0.92;
+    opacity: 0.96;
+  }
+  .navigation a {
+    color: #000;
+    text-align: left;
   }
   .main-section__title {
     font-size: 20px;
