--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -220,6 +220,9 @@
         top: 64px
     }
 
+    .order-cost-calculation {
+        margin-right: 0;
+    }
 
     .modal__form {
         padding-top: 36px;
